docs(Table): table filter sample added

--- a/packages/core/src/Table/stories/TableHooks/UseHvFilters.stories.mdx
+++ b/packages/core/src/Table/stories/TableHooks/UseHvFilters.stories.mdx
@@ -10,6 +10,9 @@ The `useHvFilters` and `useHvGlobalFilter` allows filtering rows for a given col
 Check our React Table's [`useFilter`](https://react-table.tanstack.com/docs/api/useFilter) and [`useGlobalFilter`](https://react-table.tanstack.com/docs/api/useGlobalFilter)
 documentation for configuration details.
 
+Another example using these hooks can be found in the [table section page](./?path=/docs/visualizations-table-table-section--docs) under the
+Table Filter section.
+
 <Canvas>
   <Story name="useHvFilters" story={UseHvFiltersStory} />
 </Canvas>
