docs: add Table Settings sample

--- a/packages/core/src/Table/stories/TableSection/TableSection.mdx
+++ b/packages/core/src/Table/stories/TableSection/TableSection.mdx
@@ -68,3 +68,9 @@ Use the "Multiple column filters" checkbox to switch between these two behaviors
 In this sample the `useHvGlobalFilter` hook was also used to apply a search filter to all columns at the same time.
 
 <Canvas of={TableSectionStories.FilterStory} />
+
+### Table Settings
+
+The sample below showcases the ability to configure the columns of the table by dragging the columns to mark them as fixed, visible or hidden.
+
+<Canvas of={TableSectionStories.TableSettingsStory} />
