feat: deprecate actionsCallback globally

--- a/packages/lab/src/Flow/stories/Usage.mdx
+++ b/packages/lab/src/Flow/stories/Usage.mdx
@@ -326,12 +326,12 @@ The `id` property will be typed to be one of the allowed default actions.
 At the node level you can specify other actions. To achieve this you'll have to define:
 
 - A set of actions (`actions`);
-- A callback to handle these actions (`actionCallback`);
+- A callback to handle these actions (`onAction`);
 - A maximum number of visible actions (`maxVisibleActions`). All the other actions will be placed in a dropdown menu. By default, only one action is visible;
 - And whether the actions should be all icon buttons when visible (`actionsIconButton`). By default, this is set to `true`.
 
 ```tsx
-const handleAction = (event: any, id: string, action: any) => {
+const handleAction = (event: React.SyntheticEvent, action: HvActionGeneric) => {
   const node: Node | undefined = reactFlowInstance.getNode(id);
   if (!node) return;
 
@@ -364,7 +364,7 @@ const handleAction = (event: any, id: string, action: any) => {
       icon: <Favorite />,
     },
   ]}
-  actionCallback={handleAction}
+  onAction={handleAction}
   {...props}
 />;
 ```
@@ -483,7 +483,10 @@ export const Asset: HvFlowNodeFC = (props) => {
 
   const node = useFlowNode();
 
-  const handleAction = (event: any, nodeId: string, action: any) => {
+  const handleAction = (
+    event: React.SyntheticEvent,
+    action: HvActionGeneric
+  ) => {
     if (!node) return;
 
     switch (action.id) {
@@ -539,7 +542,7 @@ export const Asset: HvFlowNodeFC = (props) => {
             icon: <Flag />,
           },
         ]}
-        actionCallback={handleAction}
+        onAction={handleAction}
         params={[
           {
             id: "asset",
