--- a/docs/overview/status/ProjectStatus.mdx
+++ b/docs/overview/status/ProjectStatus.mdx
@@ -28,9 +28,9 @@ To know more about the practices that are followed for release and versioning, p
 
 NEXT UI Kit supports the latest, stable releases of all major browsers and platforms.
 
-| Edge  | Firefox | Chrome | Safari (macOS) |     IE 11     |
-| :---: | :-----: | :----: | :------------: | :-----------: |
-| >= 91 |  >= 78  | >= 90  |     >= 14      | Not supported |
+| Edge | Firefox | Chrome | Safari (macOS) |     IE 11     |
+| :--: | :-----: | :----: | :------------: | :-----------: |
+|  ✅  |   ✅    |   ✅   |       ✅       | Not supported |
 
 ## DS alignment <a id="ds-alignment" />
 
@@ -42,18 +42,11 @@ The following table shows the components alignment with **NEXT DS 5.6.0** and th
 
 <ul>
   <li>
-    <b>✅:</b> all the features have been implemented.
-  </li>
-  <li>
-    <b>Supported:</b> the feature has been implemented in another component.
-    Check the <b>Notes</b> column for more details.
-  </li>
-  <li>
-    <b>Planned:</b> the feature is planned to be implemented.
+    <b>✅:</b> all major features have been implemented.
   </li>
   <li>
     <b>Not Planned:</b> there's no planning at the moment to implement the
-    feature.
+    feature. Check the <b>Notes</b> column for more details.
   </li>
 </ul>
 
@@ -65,8 +58,8 @@ If you need a component or feature that is not supported, please reach out to us
       <thead>
         <tr>
           <th style={{ textAlign: "left", width: 150 }}>{key}</th>
-          <th style={{ width: 200 }}>Missing Features / Variants</th>
           <th style={{ width: 120 }}>Status</th>
+          <th style={{ width: 200 }}>Missing Features / Variants</th>
           <th style={{ width: 200 }}>Notes</th>
         </tr>
       </thead>
@@ -74,8 +67,10 @@ If you need a component or feature that is not supported, please reach out to us
         {value.map((item) => (
           <tr key={item.name}>
             <td>{item.name}</td>
-            <td style={{ textAlign: "center" }}>{item.features}</td>
             <td style={{ textAlign: "center" }}>{item.status}</td>
+            <td style={{ whiteSpace: "pre-line" }}>
+              {item.features.split("<br/>").join("\n")}
+            </td>
             <td>{item.notes}</td>
           </tr>
         ))}
