feat(typography): caption label variant added

--- a/packages/core/src/Typography/Usage.mdx
+++ b/packages/core/src/Typography/Usage.mdx
@@ -51,7 +51,8 @@ The Typography component comes with 9 variants that are mapped to an HTML elemen
 | title3       | h3           |
 | title4       | h4           |
 | body         | p            |
-| label        | label        |
+| label        | span         |
+| captionLabel | p            |
 | caption1     | p            |
 | caption2     | p            |
 
