feat(TableHooks): add use row state hook

--- a/packages/core/src/Table/stories/TableHooks/TableHooks.mdx
+++ b/packages/core/src/Table/stories/TableHooks/TableHooks.mdx
@@ -35,5 +35,6 @@ The following plugin hooks are available:
 - `useHvGroupBy`: Allows defining header groups. [See selection](./?path=/docs/visualizations-table-table-hooks-usehvgroupby--docs).
 - `useHvTableSticky`: Allows defining sticky headers and columns. [See sticky headers and columns](./?path=/docs/visualizations-table-table-hooks-usehvtablesticky--docs).
 - `useHvHeaderGroups`: Allows defining grouped headers. [See grouped headers](./?path=/docs/visualizations-table-table-hooks-usehvheadergroups--docs).
+- `useHvRowState`: Implements basic state management for prepared rows and their cells. [See row state management](./?path=/docs/visualizations-table-table-hooks--usehvrowstate)
 
 <Canvas of={TableHooksStories.UseHvHooksStory} />
