docs: replace tan stack documentation link with correct version

--- a/packages/core/src/Table/stories/TableHooks/UseHvGroupBy.mdx
+++ b/packages/core/src/Table/stories/TableHooks/UseHvGroupBy.mdx
@@ -10,7 +10,7 @@ import * as TableHooksStories from "./TableHooks.stories";
 
 Tables rows can have the capability of being expanded to show more details.
 
-Check [React Table's `useGroupBy` documentation](https://react-table.tanstack.com/docs/api/useGroupBy) for configuration details.
+Check [React Table's `useGroupBy` documentation](https://react-table-v7-docs.netlify.app/docs/api/useGroupBy) for configuration details.
 
 This example requires `useHvRowExpand` to show the grouped rows.
 
