--- a/packages/core/src/Table/stories/TableHooks/UseHvHeaderGroups.mdx
+++ b/packages/core/src/Table/stories/TableHooks/UseHvHeaderGroups.mdx
@@ -10,7 +10,7 @@ import * as TableHooksStories from "./TableHooks.stories";
 
 The table columns can be grouped, allowing it to have header groups.
 
-Check [React Table's `useTable` documentation](https://react-table.tanstack.com/docs/api/useTable#column-options) for configuration details.
+Check [React Table's `useTable` documentation](https://react-table-v7-docs.netlify.app/docs/api/useTable#column-options) for configuration details.
 
 This is implemented using the `useHvHeaderGroups` custom React Table hook provided by the UI Kit library.
 
