--- a/packages/core/src/Table/stories/TableHooks/UseHvRowExpand.mdx
+++ b/packages/core/src/Table/stories/TableHooks/UseHvRowExpand.mdx
@@ -10,7 +10,7 @@ import * as TableHooksStories from "./TableHooks.stories";
 
 Tables rows can have the capability of being expanded to show more details.
 
-Check [React Table's `useExpanded` documentation](https://react-table.tanstack.com/docs/api/useExpanded) for configuration details.
+Check [React Table's `useExpanded` documentation](https://react-table-v7-docs.netlify.app/docs/api/useExpanded) for configuration details.
 
 The `useHvRowExpand` hook injects a `HvButton` into the first data column that toggles each row expansion. If the column has a custom renderer, an
 extra column is created instead.
