--- a/packages/core/src/Table/stories/TableHooks/UseHvFilters.mdx
+++ b/packages/core/src/Table/stories/TableHooks/UseHvFilters.mdx
@@ -10,7 +10,7 @@ import * as TableHooksStories from "./TableHooks.stories";
 
 The `useHvFilters` and `useHvGlobalFilter` allows filtering rows for a given column or all columns respectively.
 
-Check our React Table's [`useFilter`](https://react-table.tanstack.com/docs/api/useFilter) and [`useGlobalFilter`](https://react-table.tanstack.com/docs/api/useGlobalFilter)
+Check our React Table's [`useFilter`](https://react-table-v7-docs.netlify.app/docs/api/useFilter) and [`useGlobalFilter`](https://react-table-v7-docs.netlify.app/docs/api/useGlobalFilter)
 documentation for configuration details.
 
 Another example using these hooks can be found in the [table section page](./?path=/docs/visualizations-table-table-section--docs) under the
