--- a/packages/core/src/Table/stories/TableHooks/UseHvPagination.mdx
+++ b/packages/core/src/Table/stories/TableHooks/UseHvPagination.mdx
@@ -10,7 +10,7 @@ import * as TableHooksStories from "./TableHooks.stories";
 
 Data can be paginated. Optionally, empty lines can be added to the last page to avoid changes in height.
 
-Check [React Table's `usePagination` documentation](https://react-table.tanstack.com/docs/api/usePagination) for configuration details.
+Check [React Table's `usePagination` documentation](https://react-table-v7-docs.netlify.app/docs/api/usePagination) for configuration details.
 
 The useHvPagination hook makes the `getHvPaginationProps` function available on the table instance returned that can be used to setup a
 `HvPagination` component.
