--- a/packages/core/src/Table/stories/TableHooks/UseHvRowSelection.mdx
+++ b/packages/core/src/Table/stories/TableHooks/UseHvRowSelection.mdx
@@ -10,7 +10,7 @@ import * as TableHooksStories from "./TableHooks.stories";
 
 Rows can be selected individually.
 
-Check [React Table's `useRowSelect` documentation](https://react-table.tanstack.com/docs/api/useRowSelect) for configuration details.
+Check [React Table's `useRowSelect` documentation](https://react-table-v7-docs.netlify.app/docs/api/useRowSelect) for configuration details.
 
 The `useHvRowSelection` hook injects a new column with a `HvCheckBox` to select each row. It also manages the `HvTableRow's` `isSelected` property via the
 `getRowProps`.
