--- a/packages/core/src/Table/stories/TableHooks/UseHvRowState.mdx
+++ b/packages/core/src/Table/stories/TableHooks/UseHvRowState.mdx
@@ -10,7 +10,7 @@ import * as TableHooksStories from "./TableHooks.stories";
 
 Rows can have a state.
 
-Check [React Table's `useRowState` documentation](https://react-table.tanstack.com/docs/api/useRowSelect) for configuration details.
+Check [React Table's `useRowState` documentation](https://react-table-v7-docs.netlify.app/docs/api/useRowSelect) for configuration details.
 
 Press the edit button to see the state of the row changing.
 
