--- a/packages/core/src/Table/stories/TableHooks/UseHvSortBy.mdx
+++ b/packages/core/src/Table/stories/TableHooks/UseHvSortBy.mdx
@@ -11,7 +11,7 @@ import * as TableHooksStories from "./TableHooks.stories";
 Tables can have the capability of sorting the data by column. Clicking a sortable column header toggles between ascending or descending. Multiple sorting criteria
 is enabled through holding shift while clicking.
 
-Check [React Table's `useSortBy` documentation](https://react-table.tanstack.com/docs/api/useSortBy) for configuration details.
+Check [React Table's `useSortBy` documentation](https://react-table-v7-docs.netlify.app/docs/api/useSortBy) for configuration details.
 
 The `useHvSortBy` hook ensures that the proper properties are injected in the `HvTableHeader` (including the on click sorting trigger) and `HvTableCell` (for styling).
 
