feat: add useHvRowState hook (#4095)
* feat(TableHooks): add use row state hook

* docs: fix broken links
* docs: replace tan stack documentation link with correct version
* chore: fix a11y issue in sample
* chore: fix link typo
* chore: fix a11y
* chore: remove code duplication
* chore: fix a11y

--- a/packages/core/src/Table/stories/TableHooks/TableHooks.mdx
+++ b/packages/core/src/Table/stories/TableHooks/TableHooks.mdx
@@ -27,13 +27,14 @@ The following plugin hooks are available:
 - `useHvTableStyles`: Ensures the correct styling of the table by injecting the column's `variant` and `align` options into the `HvTableHeader` and
   `HvTableCell` components (via `getHeaderProps` and `getCellProps`, respectively). Also adds support for injecting the `styles`, `className` and
   `classes` into the `HvTable`, `HvTableHeader`, and `HvTableCell` components.
-- `useHvPagination`: Eases the wiring of the `HvPagination` component when using pagination. [See pagination](./?path=/docs/visualizations-table-table-hooks-usehvpagination--docs).
-- `useHvRowSelection`: Creates and manages the UI for selecting rows. [See selection](./?path=/docs/visualizations-table-table-hooks-usehvrowselection--docs).
-- `useHvBulkActions`: Eases the wiring of the `HvBulkActions` component. [See bulk selection and actions](./?path=/docs/visualizations-table-table-hooks-usehvbulkactions--docs).
-- `useHvSortBy`: Manages the table's header sorting functionality. [See sorting](./?path=/docs/visualizations-table-table-hooks-usehvsortby--docs).
-- `useHvRowExpand`: Manages the row expanding functionality. [See row expanding](./?path=/docs/visualizations-table-table-hooks-usehvrowexpand--docs).
-- `useHvGroupBy`: Allows defining header groups. [See selection](./?path=/docs/visualizations-table-table-hooks-usehvgroupby--docs).
-- `useHvTableSticky`: Allows defining sticky headers and columns. [See sticky headers and columns](./?path=/docs/visualizations-table-table-hooks-usehvtablesticky--docs).
-- `useHvHeaderGroups`: Allows defining grouped headers. [See grouped headers](./?path=/docs/visualizations-table-table-hooks-usehvheadergroups--docs).
+- `useHvPagination`: Eases the wiring of the `HvPagination` component when using pagination. [See pagination](./?path=/docs/visualizations-table-table-hooks-usehvpagination).
+- `useHvRowSelection`: Creates and manages the UI for selecting rows. [See selection](./?path=/docs/visualizations-table-table-hooks-usehvrowselection).
+- `useHvBulkActions`: Eases the wiring of the `HvBulkActions` component. [See bulk selection and actions](./?path=/docs/visualizations-table-table-hooks-usehvbulkactions).
+- `useHvSortBy`: Manages the table's header sorting functionality. [See sorting](./?path=/docs/visualizations-table-table-hooks-usehvsortby).
+- `useHvRowExpand`: Manages the row expanding functionality. [See row expanding](./?path=/docs/visualizations-table-table-hooks-usehvrowexpand).
+- `useHvGroupBy`: Allows defining header groups. [See selection](./?path=/docs/visualizations-table-table-hooks-usehvgroupby).
+- `useHvTableSticky`: Allows defining sticky headers and columns. [See sticky headers and columns](./?path=/docs/visualizations-table-table-hooks-usehvtablesticky).
+- `useHvHeaderGroups`: Allows defining grouped headers. [See grouped headers](./?path=/docs/visualizations-table-table-hooks-usehvheadergroups).
+- `useHvRowState`: Implements basic state management for prepared rows and their cells. [See row state management](./?path=/docs/visualizations-table-table-hooks--usehvrowstate)
 
 <Canvas of={TableHooksStories.UseHvHooksStory} />
