docs: upgrade to Storybook 8

--- a/docs/guides/provider/Provider.mdx
+++ b/docs/guides/provider/Provider.mdx
@@ -1,4 +1,5 @@
-import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
+import { Canvas, Meta, Story } from "@storybook/addon-docs";
+import { Controls } from "@storybook/blocks";
 import { ds3, HvProvider } from "@hitachivantara/uikit-react-core";
 
 import * as ProviderStories from "./Provider.stories";
@@ -32,4 +33,4 @@ Otherwise, the styling will not work properly. Please, find an example below.
 **UI Kit components will not work properly if the `HvProvider` is not configured correctly** since they will not be able to access the properties of the active theme.
 
 <Canvas of={ProviderStories.Main} />
-<ArgsTable of={HvProvider} />
+<Controls of={ProviderStories.Main} />
