feat: scatter plot added

--- a/docs/guides/visualizations/Visualizations.mdx
+++ b/docs/guides/visualizations/Visualizations.mdx
@@ -15,6 +15,7 @@ At the moment, the following visualizations are available and we are continuousl
 - [Bar chart](./?path=/docs/visualizations-bar-chart--docs)
 - [Donut chart](./?path=/docs/visualizations-donut-chart--docs)
 - [Confusion matrix](./?path=/docs/visualizations-confusion-matrix--docs)
+- [Scatter plot](./?path=/docs/visualizations-scatter-plot--docs)
 
 The KPI and Table components are available on the `uikit-react-core` package while all the other visualizations are in the `uikit-react-viz` package.
 
