feat: add Heatmap viz

--- a/docs/guides/visualizations/Visualizations.mdx
+++ b/docs/guides/visualizations/Visualizations.mdx
@@ -16,6 +16,8 @@ At the moment, the following visualizations are available and we are continuousl
 - [Donut chart](./?path=/docs/visualizations-donut-chart--docs)
 - [Confusion matrix](./?path=/docs/visualizations-confusion-matrix--docs)
 - [Scatter plot](./?path=/docs/visualizations-scatter-plot--docs)
+- [Treemap](./?path=/docs/visualizations-treemap--docs)
+- [Heatmap](./?path=/docs/visualizations-heatmap--docs)
 
 The KPI and Table components are available on the `uikit-react-core` package while all the other visualizations are in the `uikit-react-viz` package.
 
