--- a/docs/guides/forms/FormsGuide.mdx
+++ b/docs/guides/forms/FormsGuide.mdx
@@ -1,8 +1,8 @@
-import { Canvas, Meta } from "@storybook/blocks";
+import { Canvas, Meta } from "@storybook/addon-docs";
 
 import * as FormSamples from "./FormsSamples.stories";
 
-<Meta of={FormSamples} name="Docs" />
+<Meta of={FormSamples} />
 
 # Forms Guide
 
