--- a/docs/guides/provider/Provider.mdx
+++ b/docs/guides/provider/Provider.mdx
@@ -1,5 +1,4 @@
-import { Canvas, Meta, Story } from "@storybook/addon-docs";
-import { Controls } from "@storybook/blocks";
+import { Canvas, Controls, Meta, Story } from "@storybook/addon-docs";
 import { ds3, HvProvider } from "@hitachivantara/uikit-react-core";
 
 import * as ProviderStories from "./Provider.stories";
