feat: add Boxplot viz

--- a/docs/guides/visualizations/Visualizations.mdx
+++ b/docs/guides/visualizations/Visualizations.mdx
@@ -18,6 +18,7 @@ At the moment, the following visualizations are available and we are continuousl
 - [Scatter plot](./?path=/docs/visualizations-scatter-plot--docs)
 - [Treemap](./?path=/docs/visualizations-treemap--docs)
 - [Heatmap](./?path=/docs/visualizations-heatmap--docs)
+- [Boxplot](./?path=/docs/visualizations-boxplot--docs)
 
 The KPI and Table components are available on the `uikit-react-core` package while all the other visualizations are in the `uikit-react-viz` package.
 
