chore(deps): bump, dedupe, address issues
- new React `onToggle` global conflicts with our internal ones
- address arquero & @emotion typings changes
- fix prettier
- address a11y issues
- bump storybook

--- a/packages/core/src/Table/stories/TableSection/TableSection.mdx
+++ b/packages/core/src/Table/stories/TableSection/TableSection.mdx
@@ -28,8 +28,8 @@ with the `HvTableSection` component:
 This will result in the table adapting to the new visuals:
 
 <Canvas of={TableSectionStories.SimpleTableSectionStory} />
-If your table includes more complex controls, like bulk actions or pagination, these
-are adapted just the same:
+If your table includes more complex controls, like bulk actions or pagination,
+these are adapted just the same:
 
 <Canvas of={TableSectionStories.CompleteTableSectionStory} />
 
