chore: pentaho package created and canvas components moved to the new package

--- a/docs/overview/introduction/Introduction.mdx
+++ b/docs/overview/introduction/Introduction.mdx
@@ -43,6 +43,7 @@ NEXT UI Kit resources are distributed across multiple npm packages. This allows 
 - **Viz** - React visualizations for the NEXT Design System.
 - **Code Editor** - React Monaco editor for the NEXT Design System.
 - **UnoCSS Preset** - UnoCSS preset for styling with Utility Classes.
+- **Pentaho** - Pentaho+ React components.
 
 ## Accessibility
 
