--- a/packages/pentaho/src/Canvas/Canvas.mdx
+++ b/packages/pentaho/src/Canvas/Canvas.mdx
@@ -6,9 +6,8 @@ import { Meta } from "@storybook/addon-docs";
 
 This section showcases all the Pentaho+ canvas components. At the moment, the following components are available:
 
-- [Floating Panel](./?path=/docs/pentaho-canvas-floating-panel--docs)
-- [Panel](./?path=/docs/pentaho-canvas-panel--docs)
-- [Tabs and Tab](./?path=/docs/pentaho-canvas-tabs--docs)
+- [Bottom Panel](./?path=/docs/pentaho-canvas-bottom-panel--docs)
+- [Side Panel](./?path=/docs/pentaho-canvas-side-panel--docs)
 - [Toolbar](./?path=/docs/pentaho-canvas-toolbar--docs)
 
 As a disclaimer, it's important to note that all canvas components are a work in progress and there might be breaking changes.
