feat: canvas toolbar tabs component added

--- a/packages/pentaho/src/Canvas/Canvas.mdx
+++ b/packages/pentaho/src/Canvas/Canvas.mdx
@@ -9,6 +9,7 @@ This section showcases all the Pentaho+ canvas components. At the moment, the fo
 - [Bottom Panel](./?path=/docs/pentaho-canvas-bottom-panel--docs)
 - [Side Panel](./?path=/docs/pentaho-canvas-side-panel--docs)
 - [Toolbar](./?path=/docs/pentaho-canvas-toolbar--docs)
+- [Toolbar Tabs](./?path=/docs/pentaho-canvas-toolbar-tabs--docs)
 
 As a disclaimer, it's important to note that all canvas components are a work in progress and there might be breaking changes.
 
