--- a/docs/overview/community/Contributing.mdx
+++ b/docs/overview/community/Contributing.mdx
@@ -1,6 +1,6 @@
 import { Markdown, Meta } from "@storybook/addon-docs";
 
-import Contributing from "../../../CONTRIBUTING.md?raw";
+import Contributing from "../../../.github/CONTRIBUTING.md?raw";
 
 <Meta title="Overview/Community/Contributing" />
 
