feat: add HvIconContainer component

--- a/docs/foundation/Icons/Icons.mdx
+++ b/docs/foundation/Icons/Icons.mdx
@@ -52,3 +52,5 @@ const MyComponent = () => (
 
 <Canvas of={IconStories.IconSprites} />
 <Controls of={IconStories.IconSprites} />
+
+<DocsStory of={IconStories.ExternalIconsStory} />
