--- a/docs/overview/community/ReleaseVersioning.mdx
+++ b/docs/overview/community/ReleaseVersioning.mdx
@@ -41,7 +41,8 @@ The following cases are exceptions to this rule:
 
 ## Long-term support (LTS)
 
-NEXT UI Kit will continue to provide security updates and support for regressions for two versions prior to the current major version, for example regressions caused by external factors such as browser updates, or changes to upstream dependencies.
+NEXT UI Kit provides support for security updates, bug fixes or external regressions for the two previous major versions.
+This support is made upon request via the [GitHub Issues](https://github.com/lumada-design/hv-uikit-react/issues) page.
 
 ## Deprecation policy
 
